--- a/spinner.html
+++ b/spinner.html
@@ -8,7 +8,7 @@
     <style>
     @charset "UTF-8";
     .number-spinner {
-    max-width: 65px;
+    max-width: 80px;
     line-height: 30px;
     padding: 0;
     margin: 0;
@@ -39,33 +39,35 @@
     white-space: nowrap;
     vertical-align: middle;
     display: table-cell;
-    cursor: pointer;    
+    cursor: pointer;
+    margin:1px;
+    padding:0 3px 0 3px;
     }
     .number-spinner .ns-btn a {
-    height: 30px;
-    min-height: 30px;
+    height: 25px;
+    min-height: 25px;
     width: 18px;
-    padding: 0;
+    padding: 0 3px 0 3px;
     max-width: 18px;
     line-height: 30px;
-    border-radius: 0;
-    border: none;
+    border-radius: 5px;    
+    background: #fc0303;
     text-align: center;
     position: relative;
-    color: #fc0303;
+    color: #FFF;
     display: inline-block;
     vertical-align: middle;
     text-decoration: none;
     }
     .number-spinner .ns-btn .icon-minus:after {
     content: "−";
-    font-size: 35px;
-    line-height: 28px;
+    font-size: 25px;
+    line-height: 25px;
     font-weight: bold;
     }
     .number-spinner .ns-btn .icon-plus:after {
     content: "+";
-    font-size: 35px;
+    font-size: 25px;
     line-height: 25px;
     font-weight: bold;
     }
@@ -83,7 +85,7 @@
             <a data-dir="up"><span class="icon-plus"></span></a>
         </span>
     </div>
-
+    <br>
     <div class="number-spinner">
         <span class="ns-btn">
             <a data-dir="dwn"><span class="icon-minus"></span></a>
